src/app/pages/kurser/kurser.component.scss
@use "abstract/mixins" as m;

p {
  padding-top: 2rem;
  margin-bottom: 2rem;
}

/* Filters styling */

form {
  padding-bottom: 1rem;
  border-bottom: 0.1rem solid rgba(0, 0, 0, 0.3);
  @media (prefers-color-scheme: dark) {
    border-bottom: 0.1rem solid rgba(255, 255, 255, 0.3);
  }
}

.input-box {
  @include m.flex(normal, normal, row, 4rem);
  @include m.media-query(tablet) {
    @include m.flex(normal, center, column, 0rem);
  }
  mat-form-field {
    flex: 1;
  }
  app-course-subject-selector {
    flex: 2;
  }
}

/* Table styling */

table.mat-mdc-table {
  margin-bottom: 2rem;
  background-color: transparent;

  th.mat-mdc-header-cell {
    border-bottom-color: rgba(0, 0, 0, 0.3);
    @media (prefers-color-scheme: dark) {
      border-bottom-color: rgba(255, 255, 255, 0.3);
    }
  }

  td.mat-mdc-cell {
    padding-block: 1rem;
    border-bottom-color: rgba(0, 0, 0, 0.3);
    @media (prefers-color-scheme: dark) {
      border-bottom-color: rgba(255, 255, 255, 0.3);
    }
  }

  th.mat-column-points,
  td.mat-column-points {
    text-align: center;
  }

  th.mat-column-add,
  td.mat-column-add {
    text-wrap: nowrap;
    text-align: center;
  }
}

/* Card Styling */

mat-card {
  margin-bottom: 1rem;
  mat-card-header {
    margin-bottom: 1rem;
  }
  mat-card-content {
    margin-bottom: 1rem;
    p:nth-child(2) {
      margin-block: 0.4rem;
    }
  }
}

/* Paginator styling */

mat-paginator {
  margin-bottom: 2rem;
  background-color: transparent;
}

